# dgame

./: .gitignore  config.toml  pyproject.toml
dgame/: __init__.py  config.json  main.py
dgame/assets/worlds/europa/: metadata.json
dgame/core/: __init__.py  component.py  config.py  controller.py  criteria.py  engine.py  entity.py  game.py  logger.py  modifiers.py  player.py  utils.py
dgame/core/basemap/: basemap.py  render.py
dgame/core/entities/: entity.py
dgame/core/entities/buildings/: __init__.py  building.py
dgame/core/entities/buildings/extraction/: extraction.py
dgame/core/entities/buildings/production/: production.py
dgame/core/entities/units/: __init__.py  unit.py
dgame/core/entities/units/worker/: worker.py
dgame/core/faction/: faction.py  plugin.py
dgame/core/gui/: character.py  main_window.py  navigation.py  user.py
dgame/core/landtype/: landtype.py  plugin.py
dgame/core/layer/: layer.py  plugin.py
dgame/core/misc/: config.py  coordinates.py  singleton.py
dgame/core/resource/: plugin.py  resource.py
dgame/core/world/: generation.py  manager.py
dgame/dev/: bin_dem.py  bin_luc.py  fix.py  generate_worldmap.py  geotiff_to_cog.py
dgame/game/: buildings.py  settlements.py
dgame/gui/: graphics.py  kinda.py  main.py  map.py  map_view.py  navigation.py  user.py  view.py
dgame/map/: map.py  map_config.json
dgame/map/layers/: elevation.tif  oil.geojson  rainfall.tif  temperature.tif  terrain.tif
dgame/misc/: config.py  tools.py
dgame/source/: character.py  gamestate.py
dgame/test/: test_main.py
dgame/tools/: config.py
(+3 files in other folders)
