[project]
name = "dgame"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "numpy",
    "xarray",
    "scipy",
    "pandas",
    "pygame",
    "requests",
    "rich",
    "matplotlib",
    "notebook",
    "pyqt5",
    "geopandas",
    "rioxarray",
    "toml"
]
[tool.setuptools]
packages = ["dgame"] 

[tool.setuptools.package-data]
"dgame" = ["options.json"]
"dgame.assets" = ["*"]