[project]
name = "dgame"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "scipy>=1.16.2",
    "matplotlib>=3.10.7",
    "shapely>=2.1.2",
    "rioxarray>=0.19.0",
    "geopandas>=1.1.1",
    "xarray>=2025.10.1",
    "numpy>=2.3.4",
    "toml>=0.10.2",
    "rasterio>=1.4.3",
    "noise>=1.2.2",
]
[tool.setuptools]
packages = ["dgame"] 

[tool.setuptools.package-data]
"dgame" = ["options.json"]
"dgame.assets" = ["*"]